--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,7 +8,7 @@ phases:
   build:
     commands:
       - echo Run performance test
-      - docker run -i loadimpact/k6 run - <scripts/test.js
+      - docker run -i loadimpact/k6 run - <scripts/exemploaws1.js
   post_build:
     commands:
       - echo Performance test complete
