--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -1,7 +1,7 @@
-name: K6 load test
+name: k6 load test
 on: [push]
 jobs:
-  build: K6 load test
+  build: k6 load test
   runs-on: ubuntu-latest
   steps: 
     - name: step 1 - checkout
