--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
   build:
     commands:
       - echo Run performance test
-      - docker run -i loadimpact/k6 run - exemploaws1.js
+      - docker run -i loadimpact/k6 run - <k6-aws/exemploaws1.js
   post_build:
     commands:
       - echo Performance test complete
