--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -3,8 +3,8 @@ on: [push]
 permissions:
   contents: write
 jobs:
-  build: k6 load test
-  runs-on: ubuntu-latest
+    build: k6 load test
+    runs-on: ubuntu-latest
   steps: 
     - name: step 1 - checkout
       uses: actions/checkout@v
@@ -13,4 +13,4 @@ jobs:
     - name: step 2 - run k6 load test
       uses: grafana/k6-action@v0.3.1
       with: 
-        filename: aulas_k6/exemploaws1.js
+        filename: k6-aws/exemploaws1.js
