--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -1,16 +1,16 @@
-name: k6 load test
+name: K6 load test
 on: [push]
 permissions:
   contents: write
 jobs:
-      build: k6 load test
-      runs-on: ubuntu-latest
-  steps: 
-    - name: step 1 - checkout
-      uses: actions/checkout@v
+  build: 
+    name: K6 load test
+    runs-on: ubuntu-latest
+    steps:
+      - name: step 1 - checkout
+        uses: actions/checkout@v3
 
-
-    - name: step 2 - run k6 load test
-      uses: grafana/k6-action@v0.3.1
-      with: 
-        filename: k6-aws/exemploaws1.js
+      - name: step 2 - run k6 load test
+        uses: grafana/k6-action@v0.2.0
+        with: 
+          filename: k6-aws/exemploaws.js
