--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -13,7 +13,7 @@ jobs:
       - name: step 2 - run k6 load test
         uses: grafana/k6-action@v0.2.0
         with: 
-          filename: k6-aws/exemploaws.js
+          filename: k6-aws/exemploaws1.js
 
       - run: ls & mkdir report & mc index.html report    
 
