--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -15,10 +15,17 @@ jobs:
         with: 
           filename: k6-aws/exemploaws1.js
 
-      - run: ls & mkdir report & mc index.html report    
-
-      - name: step 4 - upload artifact
+      - run: ls & mkdir report & mv index.html report
+      
+      - name: step 3 - upload artifact
         uses: actions/upload-artifact@v3
-        with:
+        with: 
           name: relatorio de testes de performance
           path: report
+      
+      - name: step 4 - publish report
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: report
